--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,16 @@
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.OrganiZen">
-        <activity android:name=".BooksActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".ShoppingListActivity"></activity>
+        <activity
+            android:name=".BooksActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
