--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.amg.organizen">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name = ".MyApp"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.OrganiZen">
-        <activity android:name=".ShoppingListActivity"></activity>
+        <activity android:name=".view.ShoppingListActivity"></activity>
         <activity
-            android:name=".BooksActivity"
+            android:name=".view.BooksActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
