--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,12 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
+        //Hilt
+        classpath 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+        classpath 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+        classpath "com.google.dagger:hilt-android:2.28-alpha"
+        classpath "com.google.dagger:hilt-android-compiler:2.28-alpha"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
